# t

codility/: Make  cyclicRotation2.c  iteration.c  main.c  oddoccurencesInArray.c  test.c
common/inc/: appli.h  arraystmpl.h  date.h  excepterr.h  httputils.h  inivalues.h  logger.h  person.h  realperson.h  sqlclient.h  timeutils.h  utils.h
common/src/: appli.cpp  arraystmpl.cpp  date.cpp  excepterr.cpp  httputils.cpp  inivalues.cpp  logger.cpp  person.cpp  realperson.cpp  sqlclient.cpp  timeutils.cpp  utils.cpp
miscellaneous/: myDotbashrc  myDotvimrc
private/: pensiaRetraiteGmul.txt  reseau
python/tutorial/: bissextile  multiply.py  t1.py  testMultiply.py
python/tutorial/package/: fonctions.py
python/tutorial/tp1/: zCasino.py
t1/: CMakeLists.txt  MakeFile  createTags.sh  indexT1  makefile  ms  msrun  readme
t1/inc/: b.h  d.h  enemytank.h  enemytarget.h  mthread.h  roundforest.h  speechsamples.h  tcpclient.h  tcpserver.h  tester.h
t1/src/: b.cpp  d.cpp  enemytank.cpp  enemytarget.cpp  mthread.cpp  roundforest.cpp  speechsamples.cpp  t1.cpp  tcpclient.cpp  tcpserver.cpp  tester.cpp
test/: test.txt  test2.txt
vikisense/: makeIt  nst.vks  speechsamples.cpp  speechsamples.h  vikisense.cpp
